# See:
#   https://packaging.python.org/en/latest/tutorials/packaging-projects/
#   https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
#
# Updating PyPi:
#   source venv/bin/activate
#   python3 -m pip install --upgrade build
#
#   python3 -m build; twine upload dist/*
[project]
name = "astroget"

#version = "0.0.3b2.dev1"  # see astroget/__init__.py
version = "0.0.4a2.dev1"

authors = [
  { name="S. Pothier", email="astroarchive@noirlab.edu" },
]
description = "Find and get FITS metadata and images."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/astroget"
"Bug Tracker" = "https://github.com/pypa/astroget/issues"
"Documentation" ="https://astroget.readthedocs.io/en/latest/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
# https://hatch.pypa.io/latest/config/build/